--- a/solutions/provisioning_azure_devops/index.asciidoc
+++ b/solutions/provisioning_azure_devops/index.asciidoc
@@ -1,223 +1,16 @@
+//Category=Provisioning
 //Platform=Azure
 //Maturity level=Advanced
 
-== Provisioning
-
-=== Context & Problem
-
-This document describes patterns to automate the deployment of an application to a target environment. The major players in this documentation are (1) the process as a whole (aka provisioning), (2) automation code and (3) application/ infra code to be deployed.  
-
-* *Automation code:*
-+
---
-The automation code is about automating parts of deployment cycle. In an ideal world this covers the entire code development cycle from the first pull request to the final deployment. Possible  activities in this cycle are: (1) quality gates, (2) build and (3) deployment.
-*Quality gates* refer to testing or approval. Approval might include a manual approval to deploy to sensitive environments like production or enforcing a review before the commit through a pull request. Failing a quality gate should stop the workflow to proceed. Ideally they are maximizing application code coverage and kick in as early as possible.
-From a timeline perspective major events that are kicking off actions from the automation code are:
-
-* Pull request/ commit (Only triggers quality gates that don't take too long)
-* Build
-+
-They can be manually, scheduled (e.g. as part of a nightly build) or automatically started. Additional quality gates ensure code quality.
-* Deplyoment to target environment
-+
-A typical quality gate for sensible environments such as production are manual approvals.
-
-The major construct is a *pipeline* that implements a certain activity or a combination. The trigger defines the condition that kick offs a pipeline. Kicking off a pipeline usually includes *parameters* such as the name of the target environment. The support of *different triggers* is essental to cover the entire lifecycle. Pipelines can be *implemented* using a UI driven or programatic approach.
-
-Pipelines are built in a modular way which also adds intermediate steps such as placing the built output in a *build artefact repository* for later deployment. It also introduces the need to *orchestrate* them into larger workflows such as creating an entire environment from scratch.
-
-Pipelines must ensure *traceability* of the performed actions across the entire chain including source code repo, the targeted environment or intermediate stores. This includes a versioning schema for built artefacts. Branches in source repos must be tagged to be able to reconstruct the code behind a versioned artefact.
---
-
-* *Application code/ infra:*
-+
---
-The base for automation code activities is the code creating/ updating the infrastructure and the application on top. Focus in this documentation is the interaction between automation code and application/ infra code. This includes:
-
-* Programming approach (Language or UI) for deploying infrastructure and application code
-* Interaction standard problems between automation code and application/ infra code
-+
-Problems also depend on the chosen programing approach.
-
-Not relevant are:
-
-* Application code: Structuring in repo, programming language specifics and details of build mechanism
-* Specific deployment options of the platform services forming the infrastructure
---
-
-* *Provisioning*
-+
---
-The process must work in a compliant way end-to-end. *Compliance* includes the general concern security and to adhere to constraints from the organization's perspective that need to be enforced.
-
-Provisoning should be subject to *monitoring* and must be able to adapt to the *organizational structure*.
-
-*Configuration* is also a cross concern that affects both sides. From the automation side this includes properties of the environment and settings of the involved automation code. The application specific settings are out of scope in this pattern description. However, provisioning must enable the application code to access settings.
-
-As shown automation does not only include pipelines but also additional configuration settings. Automation code must be able to access the infra/ app code for deployment. This pattern includes guidelines regarding options to store the code and how to structure it in a *repository*. Application code structure is treated as black box.
-
-In most cases enterprises have already existing technologies in place that might not be based on cloud of a certain provider. *Integration* with other third party offerings to cover functionally also from elsewhere is also important.
---
-
-The picture below summarizes the major aspects:
-
-image::problem_context.png[alt=Provisioning Problem Context,width=451, height=257]
-
-=== Standard Problems
-
-The following standard problems will be addressed in subsequent paragraphs:
-
-* Automation code
-+
---
-Regarding pipelines the folloqing aspects will be detailed:
-
-* Modeling environments
-* Pipeline Implementation (Programing approaches, Triggers, Paramterization, Store Code, Quality Gates)
-* Orchestration 
-* Traceability (Versioning, Tagging)
---
-* Infra/ Application code (Programming approach,
-Interaction standard problems)
-* Provisioning 
-+
---
-* Organizational Mapping
-* Integration
-* Code Repository (Automation/ Infra & App Code)
-* Configuration
-* Compliance
---
-
-For the following aspectcs check out the other defined patterns:
-
-* Monitoring infrastructure and application code
-* General guidelines for structuring repositories (e.g. mono vs. multi-repo) 
-* General guidelines for defining landing zones
-
-=== Azure as Platform
-==== Automation code
-===== Modelling Environments
-
-Azure provides the following structural elements to model an environment:
-
-* *Resource groups:* Smallest possible container
-* *Subscriptions:* One subscription can contain many resource groups. With a subscription discounts for dev/ test environments are possible.
-* *Management groups:* One management group can contain many resource groups. They can be used enforce policies across subscriptions if environments share common characteristics.
-
-An environment can be linked to another environment. Linking an environment to multiple environment is beneficial for addressing cross concerns such as monitoring (Similar to Hub/ Spoke topology in networks).
-
-===== Pipeline Implementation
-
-The programming approach can be either UI driven or *programmatic*. Pipeline programming languages such as YAML structure the actions to be performed by the pipeline and provide basic mechansims such as downloading code from the repo, parameter handling, stating triggers and triggering other programming languages. These other languages are then used to setup infrastructure such as terraform or deploying application code.
-
-Azure allows to *trigger* pipelines upon (1) a push to repo, (2) a pull request to repo, (3) a schedule and (4) a pipeline completion (https://docs.microsoft.com/en-us/azure/devops/pipelines/build/triggers?view=azure-devops[Link]).
-
-The platform allows to *pass parameters* by various mechanisms to pipelines(Explicit per user input, programmatically). Parameters can be passed by group identifier or explicitly as key value pairs. Complex structured objects as known from object programming languages are not directly possible (Require parsing of files with object structure). Parametrization might be constrained by the used service in certain areas.
-
-The platform provides *support for quality gates* as follows:
-
-* Static code analysis
-+
-Microsoft does not provide own tools for static code analysis but allows integration of others.
-* Automated tests (Unit, Integration, End-To-End)
-+
-Microsoft provides services that include test management e.g. creating test suites with test cases and getting an overview about the results.
-* Approval
-+
-Azure services support approval for a certain environments and enforcing pull requests as quality gates.
-
-The Azure platform provides the following basic options to *store* automation code:
-
-* Services that provide repositories
-* Integration of various external code repositories
-
-===== Orchestration
-
-To *orchestrate* pipelines the two following basic mechanisms can be used:
-
-* Implicit Chaining
-+
-In that case the complete workflow is not explicitly coded in a dedicated pipeline. Pipelines are chained implicitly by triggering events. The biggest problem with that approach is the missing single pane of control. The current state in the overall workflow is for instance only implicitly given by the currently running pipeline.
-
-* Creating a dedicated orchestration pipeline
-+
-An additional pipeline triggers in this scenario other pipelines acting as building blocks. Pipelines can run separately (Just run the deployment) or as part of a bigger workflow (=create environment from scratch).
-
-Orchestration must take dependencies into account. They might result from the deployed code or the scope of the pipeline (Scope = e.g. a single microservice; Code = libraries needed).
-Orchestrated pipelines must pass data between them. The recommended method is to use key vault.
-
-*Recreation of resources in short intervals* can cause pipelines to fail since the previously deleted resource still exists in the background.(Even although soft delete is not applicable). Whether Azure really deleted everything depends on the service. For instance Azure API management seemed to be affected by that problem.
-
-===== Traceability
-
-*Traceability* requires an identifier for referencing artefacts. A standard schema is a semantic version. The platform only supports partial support for number generation such as incrementing numbers (https://ychetankumarsarma.medium.com/build-versioning-in-azure-devops-pipelines-94b5a79f80a0[Link]). Linking the code in the repo to a certain version depends on used repository. 
-
-==== Infrastructure/ Application code
-
-A *programming language* is either "declarative" or "imperative". Declarative programming languages state the target state and it is the job of the declarative programming language how to get there. The following rules are applied to achieve that: (1) Create a resource if not there, (2) update an existing resource if different properties, (3) delete resource if not there. Imperative programming languages state the how. The internal delta calculation needs to be explicitly programmed here. If possible declarative programming languages are recommended due to automatic delta calculation. Typical case is infrastructure.
-
-Typical declarative options are shown in detail in the table below. The overall recommendation is to go for terraform. Major reasons for downvoting Bicep/ ARM:
-
-* ARM: difficult readability for humans
-* Bicep: Lack of support for testing based on plan and testing ecosystem since first added recently.
-
-Table with declarative programming language options:
-[options="header"]
-|=======================
-|Criteria|Bicep      |ARM | Terraform
-|Same syntax across clouds |- (Azure Only)     |- (Azure Only)   |+ (multi)
-|What if    |o (no complete prop list;only display of plan; unexpected delete)     |- (not available)   |+ (plan command)
-|Detection current    |o (Real anaylsis but time)     |+ (Real anaylsis)   |o (Statefile)
-|Testing/ static analysis    |o (Only via ARM)|+ (available)   |+ (available)
-|Human Readability    |+ |- |+
-|Reverse Engineering    |- (Extra ARM step + adjust) |o (adjust) |+ (Direct via Terraformer)
-|Latest features    |o (No embedded fallback) |+ (native) |o (Time lag but embedded fallback)
-|=======================
-
-The major options for imperative programming languages are Azure CLI, Powershell (Windows) or Linux based scripting. Azure CLI is recommended as prefered choice since it works on linux and windows based VMs.
-
-The created resources should follow a *uniform naming schema*. This requires naming to be factored out in a centralized module. Terraform supports factoring out common code in modules. However the backend must already exist and should also follow a naming convention. The recommendation is therefore to expose the common terraform module via an additional path that does not require a backend to determine the names for the azure resources representing the backend. 
-
-==== Provisioning
-===== Organizational Mapping
-
-The provisioning must match the organizational requirements of your organization. Azure provides services to model sub units within your organization such as departments, projects and teams.
-
-===== Integration
-
-Platform allows a modular approach to outsource certain functionality to third party software such as code repository. Which parts is service specific.
-
-External tools providing pipelines can be integrated in two conceptual ways:
-
-* *Trigger automation pipelines from external:* This involves the configuration of a CI pipeline in the external tool such as Jenkins and mechanism in the automation service that invokes the CI process when source code is pushed to a repository or a branch.
-* *Run external pipelines from within the platform:* In this approach automation reaches out to an external tool to work with the results.
-
-===== Configuration
-
-Configuration for provisioning is required in various areas:
-
-* *Environment:* E.g. name of resource group per potential target environment
-* *Repository:* E.g. relevant repos/ branching
-* *Pipelines:* Parameters pipelines run with such as the technical user name or settings required by the built/ deployed code.
-
-Concrete features used for the above three points depend on the used services. A general storage for sensitive data (Keys, secrets, certificates) in Azure is always Azure Key Vault.
-
-===== Compliance
-
-The standard concept for role-based access controls is called RBAC in Azure. It assigns principals (=humans or technical accounts) permissions for a certain resource. Regarding provisioning the following users are relevant:
-
-* Technical user (=service principal) the pipelines are running with
-* Users for administrating the provisioning service
-
-Azure Active Directory is the central service in Azure that defines and controls all principals (human/ service).
-
-Granularity of roles that can be granted depend on the service. The boundaries in which users exist/ permissions can be assigned is also service specific.
-
-=== Solution (Full blown productive)
-==== Overview
-
-The Azure service targeting a full-blown productive provisioning setup is Azure DevOps.
+:toc: macro
+toc::[]
+:idprefix:
+:idseparator: -
+
+== Solution Provisioning Azure Native
+=== Overview
+
+The cloud native provisioning service in Azure is Azure DevOps formerly known as Team Foundation Server (TFS). Azure DevOps covers the full CI/ CD requiremenzs including project management. Due to its extensive extension features you can also replace features with other alternatives (see also under variations).
 
 *+++Note:+++* Azure DevOps will be superseeded by GitHub in the long run after Microsoft acquired GitHub. New features will be initially implemented there.
 
@@ -226,26 +19,27 @@ The services that (can) complement Azure DevOps:
 * Azure Key Vault for storing secrets/ exchange of settings
 * Azure App Configuration
 +
-This service provides settings (key-value pairs) and feature toggles. Native integrations exist for typical application programming languages like .NET/ Java. However native integrations with terraform do not exist and it is also a special hardened service for sensitive information as key vault. Therefore, it is recommended to use that service as special case for application layer if feature toggles are needed.
+This service provides settings (key-value pairs) and feature toggles. Native integrations exist for typical application programming languages like .NET/ Java. However native integrations with terraform do not exist and it is also not hardened for sensitive information as key vault. Therefore, it is recommended to use that service as special case for application layer if feature toggles are needed.
 * Azure AD
 +
 Azure Active Directory provides the service principal the pipelines run with.
 * Monitoring
 +
-Azure DevOps generates metrics to check the health pipelines and displays te state in the Azure DevOps portal . However no built-in forwarding to App Insights independent from the deployed application exists. Continous monitoring assumes Web Applications.
+Azure DevOps generates metrics to check the health pipelines and displays te state in the Azure DevOps portal. However no built-in forwarding to App Insights independent from the deployed application exists. Continous monitoring assumes Web Applications.
 Check out the pattern monitoring how monitoring for infrastructure/ application code can be achieved. 
 Essential is that a monitoring consumer gets a single control plane across multiple environments.
 * Structural elements to model environments
 
 The picture illustrates the setup with the major dependencies:
 
-image::complementing_services.png[Complementing Services, width=594, height=335]
+image::complementing_svcs_devops.png[Complementing Services, width=594, height=335]
 
-==== Pattern Details
-===== Geting Started
+=== Pattern Details
+==== Geting Started
 
 Many aspects influence the setup of the service. Following a top down approach the following decisions have to be made:
-* Define landing zone of the service itself (out of scope)
+
+* Define landing zone of the service itself in Azure (out of scope)
 * Organizational mapping
 +
 This yields the structural components to host provisioning which will be detailed in the next chapter. It introduces the possible components and guidelines for its structuring.
@@ -297,7 +91,7 @@ Adding teams instead of projects is recommended over projects for the following 
 * Tracking and auditing: It's easier to link work items and other objects for tracking and auditing purposes
 * Maintainability: You minimize the maintenance of security groups and process updates.
 
-The table below lists typical configurations along with their characteristics :
+The table below lists typical configurations along with their characteristics:
 [options="header"]
 |=======================
 |Criteria|1 project, N teams      |1 org, N projects/ teams | N orgs
@@ -305,7 +99,7 @@ The table below lists typical configurations along with their characteristics :
 |Process    |Aligned processes across teams; team flexibility to customize boards, dashboards, and so on     |Different processes per prj;e.g. different work item types, custom fields   |same as many projects
 |=======================
 
-===== Remaining goals (Automation Code)
+==== Remaining goals (Automation Code)
 
 This chapter details how the above conceptual features can be achieved with Azure DevOps pipelines. 
 
@@ -316,7 +110,7 @@ The pipeline *programming approach* can be either UI driven or programmatic by u
 Passing between jobs within the same pipeline requires publishing the files as pipeline artefacts and downloading it afterwards. Passing between syntax requires a different syntax and also requires a version.
 * Variables
 +
-Variables can have different scopes. A special syntax is required to publish them at runtime and to consume them in a different job (requires declaration). (https://docs.microsoft.com/en-us/azure/devops/pipelines/process/variables?view=azure-devops&tabs=yaml%2Cbatch[Link])
+Variables can have different scopes. A special syntax is required to publish them at runtime and to consume them in a different job (requires declaration). (https://docs.microsoft.com/en-us/azure/devops/pipelines/process/variables?view=azure-devops&tabs=yaml%2Cbatch[Link]). Various https://docs.microsoft.com/en-us/azure/devops/pipelines/build/variables?view=azure-devops&tabs=yaml[predefined] exist.
 * Obtaining client secret
 +
 Scripting languages such as terraform might require the client secret for embedded scripting blocks. However,  terraform does not provide a way to get it. The only way was to include an AzureCLI scripting task. Setting the argument "addSpnToEnvironment" to true makes the value for scripting languages as environment variable. A script can then publish the variable so that the value is available in the YAML pipeline. 
@@ -495,7 +289,7 @@ environment: env-demo
 ```
 --
 
-===== Remaining goals (Provisioning)
+==== Remaining goals (Provisioning)
 
 *Configuration settings* can be broken down into key value pairs. As already stated key vault is the recommended place for storage. Azure App Configuration and variable groups can reference values in Key Vault. Key Value pairs must be selected in YAML based on the target environment. Switching based on the parameter value is possible by constructing filenames based on the parameter value. The resolved filenam contains then the variable group or the key value pairs. as shown below:
 
@@ -529,7 +323,7 @@ variables:
   envNamePPE1KvEnvName: $(envNameCRST)1
 ``` 
 
-Azure DevOps *can integrate* with various external tools. Pipelines can be called from external and allow calling external tools. Various third party tools can be manually installed or used via extensions. The built in repository and the artefact store can be replaced with third party tools such as github.
+Azure DevOps *can integrate* with various external tools. Pipelines can be called from external and allow calling external tools. Various third party tools can be manually installed or used via extensions.
 
 For *compliance* Azure DevOps provides various settings inside Azure DevOps itself and via Azure Active Directory.
 Portal access to Boards, Repos, Pipelines, Artifacts and Test Plans can be controlled through Azure DevOps project settings (https://docs.microsoft.com/en-us/azure/devops/organizations/settings/set-services?view=azure-devops[Link]).
@@ -567,7 +361,7 @@ This level contains all infrastructure code for seting up en environment. The sp
 * 1.1.2.1.2. Non-Dev
 * 1.1.2.1.3. Modules
 +
-Factored out modules for shared reuse. One example is could a central module to generate the name for a given module.
+Factored out modules for shared reuse. One example is a central module to generate the name for a given module.
 * 1.1.2.2. Envs-Mgmt
 +
 Captures aspects assumed by the chosen programming language such as terraform for managing an environment. This includes for instance the backend creation code.
@@ -583,15 +377,26 @@ Pipelines for automating app code deployment.
 +
 Captures shared aspects between infrastructure and application code such as publishing key vault secrets for a pipeline or triggering another pipeline.
 
-==== Variations
+=== Variations
 
-For Dev/ Test scenarios the following services exist:
+The following features of Azure DevOps can be replaced with alternatives:
 
-* Azure Lab Services (https://docs.microsoft.com/en-us/azure/lab-services/)
+* Repos
+* Boards for project management
+* Azure Artefacts
+
+The following alternatives on service level exist:
+
+* https://docs.microsoft.com/en-us/azure/lab-services/[Azure Lab Services] for Dev/ Test scenarios
 * Kubernetes
-** Azure DevSpaces (Deprecated) in favor of “Bridge-to-kubernetes”
+** Azure DevSpaces (Deprecated) in favor of “Bridge-to-kubernetes” for Dev/ Test scenarios
 ** Bridge-to-Kubernetes
 
 === When to use
 
-This solution assumes that your control plane is in Azure and that your monitored resources are located in Azure.
+Azure DevOps makes sense if you want to provision to Azure due to its tight integration into the Azure platform. The following circumstances also speak for Azure DevOps:
+
+* You need a mature service on enterprise level
+* You don't need cloud agnostic pipelines e.g. due to a multi-cloud scenario
+* Your code repository is not GitHub and Azure DevOps provides integrations for it (GitHub Actions are a better alternative if your code repos are already on GitHub.)
+* You need a full blown provisioning service and plan to use the integrated repos that come with Azure DevOps
